# dish_project

./: .env  Dockerfile  README.md  alembic.ini  config.py  database.py  docker-compose.yml  exceptions.py  main.py  pyproject.toml
apps/dish/: models.py  route.py  schema.py
apps/health/: route.py
apps/user/: jwt.py  models.py  route.py  schema.py
migration/: env.py
migration/versions/: 140051203d78_create_table_for_users.py  347187897bbb_create_dish_table_for_token.py  47037f86ff9c_update_nulleable_columns.py  e4e51dc13cf5_create_dish_table_for_token.py  e7acfcef7a57_create_block_list_table_for_token.py
